<resources>
    <string name="app_name">NearMeet</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">ID Utilisateur</string>
    <string name="get_custom_token">Obtenir un token</string>
    <string name="sign_in">Se connecter</string>
    <string name="create_account">Créer un compte</string>
    <string name="send_link">Envoyer le lien</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="verify_email">Vérifier l\'email</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="loading">Chargement...</string>
    <string name="custom_token">Token personnalisé</string>
    <string name="signed_in">Connecté</string>
    <string name="signed_out">Déconnecté</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_confirm_password">Confirmer le mot de passe</string>
    <string name="desc_firebase_lockup">Firebase logo et nom</string>
    <string name="auth_failed">Erreur d\'authentification</string>
    <string name="start_phone_auth">Démarrer</string>
    <string name="verify_phone_auth">Vérifier</string>
    <string name="resend_phone_auth">Renvoyer</string>
    <string name="hint_phone_number">Numéro de téléphone</string>
    <string name="hint_verification_code">Code de vérification</string>
    <string name="status_code_sent">Code envoyé</string>
    <string name="status_verification_failed">Erreur de vérification</string>
    <string name="status_verification_succeeded">Vérification réussie</string>
    <string name="status_sign_in_failed">La connection à échoué</string>
    <string name="instant_validation">(validation instantanée)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Envoyer l\'email pour commencer</string>
    <string name="status_email_sent">Lien envoyé, vérifier votre email pour pouvoir continuer.</string>
    <string name="status_link_found">Lien reçu, entrer l\'email pour vous connecter.</string>

    <string name="phone_title_text">Numéro de téléphone</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>


    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur :</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="text_view_champ_recherche">Champ de recherche :</string>
    <string name="text_view_interet">Intérêts :</string>
    <string name="password_confirm_invalid">Les mots de passes ne correspondent pas</string>
    <string name="field_required">Ce champs est requis</string>
    <string name="button_update_account">Mettre à jour le profil</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Aucune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Etes vous sûr(e) de vouloir supprimer votre compte ?</string>
    <string name="popup_message_choice_yes">Oui</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="button_facebook_login">Se connecter avec Facebook</string>
    <string name="button_sign_up">Créer un compte</string>
    <string name="button_confirm_sign_up">S\'inscrire</string>
    <string name="button_view_login_form">Se connecter</string>


    <!-- MAIN ACTIVITY -->
    <string name="visible_text">Me rendre visible</string>
    <string name="visible_on">Visible</string>
    <string name="visible_off">Invisible</string>
    <string name="text_proximite">Voir qui est à proximité</string>

    <string name="error_not_connected">Vous devez vous connecter</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet </string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Accueil</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_settings">Paramètres</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_about_us">A propos de nous</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Accueil</item>
        <item>Profil</item>
        <item>Paramètres</item>
    </string-array>

    <!-- FRIEND_CHAT ACTIVITY -->
    <string name="toolbar_title_friend_chat_activity">Chats de discussions</string>
    <string name="text_input_title_friend_chat_activity">Composer votre message</string>
    <string name="button_title_friend_chat_activity">ENVOYER</string>
    <string name="text_view_friend_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>


    <string name="activity_title_about_us">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1945730942209334</string>
    <string name="fb_login_protocol_scheme">fb1945730942209334</string>
    <string name="title_activity_user_list">UserListActivity</string>
</resources>
