<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hfad.nearmeet.HomeFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mapView"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".MainActivity" />


        <LinearLayout
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mapView"
            app:layout_constraintTop_toBottomOf="@+id/mapView">

            <Switch
                android:id="@+id/visible_switch"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/visible_text"
                android:textOff="@string/visible_on"
                android:textOn="@string/visible_off" />

            <Button
                android:id="@+id/list_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_proximite"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
