<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hfad.nearmeet.ProfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="@dimen/default_large_margin"
            android:orientation="vertical">
            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/profile_fragment_imageview_profile"
                android:layout_width="@dimen/profil_photo_width"
                android:layout_height="@dimen/profil_photo_height"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/ic_profile_picture" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:text="@string/text_input_username"
                android:layout_gravity="center"
                android:textStyle="bold"/>

            <!-- PROFILE USERNAME -->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_fragment_edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:layout_margin="@dimen/default_margin"/>

        </LinearLayout>


        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/profile_fragment_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:paddingLeft="@dimen/default_margin"/>

        </LinearLayout>

        <!-- Champ de recherche CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_champ_recherche"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"/>


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <!-- BUTTON UPDATE INFO -->
        <Button
            android:id="@+id/profile_fragment_button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_margin"
            android:text="@string/button_update_account"
            android:textSize="@dimen/default_text_size"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

        <!-- BUTTON SIGN OUT -->
        <Button
            android:id="@+id/profile_fragment_button_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_margin"
            android:text="@string/button_sign_out_account"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/profile_fragment_button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_margin"
            android:text="@string/button_delete_account"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</FrameLayout>
